# Borocito-Control

./: .gitignore  README.md  manage.py  pyproject.toml  settings_exaple.ini
BorocitoCMD/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  models.py  urls.py  utilities.py  views.py
configs/: admin.py  models.py  urls.py  views.py
control/: consumers.py  routing.py
templates/: base.html  messages.html
templates/configs/: components.html  server.html
templates/web/: dashboard.html  telemetry.html  user_control.html  user_control_instance.html  user_list.html  user_report.html
web/: urls.py  utilities.py  views.py
