[project]
name = "borocitocmd"
version = "0.1.0"
description = "Borocito CMD with Django"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "django>=5.2.9",
    "django-browser-reload>=1.21.0",
    "python-decouple>=3.8",
    "requests>=2.32.5",
]
